// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`devices/components/moduleIdentityRoutes snapshot matches snapshot after module identity is fetched 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Delete",
          },
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.back",
          "iconProps": Object {
            "iconName": "ChromeClose",
          },
          "key": "ChromeClose",
          "name": "moduleIdentity.detail.command.back",
          "onClick": [Function],
        },
      ]
    }
  />
  <Component
    headerText="moduleIdentity.detail.headerText"
  />
  <div
    className="device-detail"
  >
    <div
      className="module-identity"
    >
      <Connect(MaskedCopyableTextField)
        allowMask={false}
        ariaLabel="moduleIdentity.moduleId"
        label="moduleIdentity.moduleId"
        labelCallout="moduleIdentity.moduleIdTooltip"
        readOnly={true}
        value={null}
      />
      <Component />
    </div>
  </div>
</Fragment>
`;

exports[`devices/components/moduleIdentityRoutes snapshot matches snapshot after module identity is fetched 2`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Delete",
          },
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.back",
          "iconProps": Object {
            "iconName": "ChromeClose",
          },
          "key": "ChromeClose",
          "name": "moduleIdentity.detail.command.back",
          "onClick": [Function],
        },
      ]
    }
  />
  <Component
    headerText="moduleIdentity.detail.headerText"
  />
  <div
    className="device-detail"
  >
    <div
      className="module-identity"
    >
      <Connect(MaskedCopyableTextField)
        allowMask={false}
        ariaLabel="moduleIdentity.moduleId"
        label="moduleIdentity.moduleId"
        labelCallout="moduleIdentity.moduleIdTooltip"
        readOnly={true}
        value={null}
      />
      <Connect(MaskedCopyableTextField)
        allowMask={true}
        ariaLabel="moduleIdentity.authenticationType.symmetricKey.primaryKey"
        label="moduleIdentity.authenticationType.symmetricKey.primaryKey"
        labelCallout="moduleIdentity.authenticationType.symmetricKey.primaryKeyTooltip"
        readOnly={true}
        value="key1"
      />
      <Connect(MaskedCopyableTextField)
        allowMask={true}
        ariaLabel="moduleIdentity.authenticationType.symmetricKey.secondaryKey"
        label="moduleIdentity.authenticationType.symmetricKey.secondaryKey"
        labelCallout="moduleIdentity.authenticationType.symmetricKey.secondaryKeyTooltip"
        readOnly={true}
        value="key2"
      />
      <Connect(MaskedCopyableTextField)
        allowMask={true}
        ariaLabel="moduleIdentity.authenticationType.symmetricKey.primaryConnectionString"
        label="moduleIdentity.authenticationType.symmetricKey.primaryConnectionString"
        readOnly={true}
        value="HostName=testhub.azure-devices.net;DeviceId=null;ModuleId=null;SharedAccessKey=key1"
      />
      <Connect(MaskedCopyableTextField)
        allowMask={true}
        ariaLabel="moduleIdentity.authenticationType.symmetricKey.secondaryConnectionString"
        label="moduleIdentity.authenticationType.symmetricKey.secondaryConnectionString"
        readOnly={true}
        value="HostName=testhub.azure-devices.net;DeviceId=null;ModuleId=null;SharedAccessKey=key2"
      />
      <Component />
    </div>
  </div>
</Fragment>
`;

exports[`devices/components/moduleIdentityRoutes snapshot matches snapshot after module identity is fetched 3`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Delete",
          },
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.back",
          "iconProps": Object {
            "iconName": "ChromeClose",
          },
          "key": "ChromeClose",
          "name": "moduleIdentity.detail.command.back",
          "onClick": [Function],
        },
      ]
    }
  />
  <Component
    headerText="moduleIdentity.detail.headerText"
  />
  <div
    className="device-detail"
  >
    <div
      className="module-identity"
    >
      <Connect(MaskedCopyableTextField)
        allowMask={false}
        ariaLabel="moduleIdentity.moduleId"
        label="moduleIdentity.moduleId"
        labelCallout="moduleIdentity.moduleIdTooltip"
        readOnly={true}
        value={null}
      />
      <StyledLabelBase>
        moduleIdentity.authenticationType.selfSigned.text
      </StyledLabelBase>
      <Connect(MaskedCopyableTextField)
        allowMask={true}
        ariaLabel="moduleIdentity.authenticationType.selfSigned.primaryThumbprint"
        label="moduleIdentity.authenticationType.selfSigned.primaryThumbprint"
        labelCallout="moduleIdentity.authenticationType.selfSigned.primaryThumbprintTooltip"
        readOnly={true}
        value="thumbprint1"
      />
      <Connect(MaskedCopyableTextField)
        allowMask={true}
        ariaLabel="moduleIdentity.authenticationType.selfSigned.secondaryThumbprint"
        label="moduleIdentity.authenticationType.selfSigned.secondaryThumbprint"
        labelCallout="moduleIdentity.authenticationType.selfSigned.secondaryThumbprintTooltip"
        readOnly={true}
        value="thumbprint2"
      />
      <Component />
    </div>
  </div>
</Fragment>
`;

exports[`devices/components/moduleIdentityRoutes snapshot matches snapshot after module identity is fetched 4`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": false,
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": false,
          "iconProps": Object {
            "iconName": "Delete",
          },
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.back",
          "iconProps": Object {
            "iconName": "ChromeClose",
          },
          "key": "ChromeClose",
          "name": "moduleIdentity.detail.command.back",
          "onClick": [Function],
        },
      ]
    }
  />
  <Component
    headerText="moduleIdentity.detail.headerText"
  />
  <div
    className="device-detail"
  >
    <div
      className="module-identity"
    >
      <Connect(MaskedCopyableTextField)
        allowMask={false}
        ariaLabel="moduleIdentity.moduleId"
        label="moduleIdentity.moduleId"
        labelCallout="moduleIdentity.moduleIdTooltip"
        readOnly={true}
        value={null}
      />
      <StyledLabelBase>
        moduleIdentity.authenticationType.ca.text
      </StyledLabelBase>
      <StyledLabelBase>
        moduleIdentity.detail.twin
      </StyledLabelBase>
      <div
        className="monaco-editor"
      >
        <Suspense
          fallback={
            <StyledSpinnerBase
              size={3}
              title="loading"
            />
          }
        >
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </Suspense>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`devices/components/moduleIdentityRoutes snapshot matches snapshot after module twin is fetched 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Delete",
          },
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.back",
          "iconProps": Object {
            "iconName": "ChromeClose",
          },
          "key": "ChromeClose",
          "name": "moduleIdentity.detail.command.back",
          "onClick": [Function],
        },
      ]
    }
  />
  <Component
    headerText="moduleIdentity.detail.headerText"
  />
  <div
    className="device-detail"
  >
    <div
      className="module-identity"
    >
      <Connect(MaskedCopyableTextField)
        allowMask={false}
        ariaLabel="moduleIdentity.moduleId"
        label="moduleIdentity.moduleId"
        labelCallout="moduleIdentity.moduleIdTooltip"
        readOnly={true}
        value={null}
      />
      <Component />
      <StyledLabelBase>
        moduleIdentity.detail.twin
      </StyledLabelBase>
      <div
        className="monaco-editor"
      >
        <Suspense
          fallback={
            <StyledSpinnerBase
              size={3}
              title="loading"
            />
          }
        >
          <ContextConsumer>
            <Component />
          </ContextConsumer>
        </Suspense>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`devices/components/moduleIdentityRoutes snapshot matches snapshot while loading 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.delete",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Delete",
          },
          "key": "Delete",
          "name": "moduleIdentity.detail.command.delete",
          "onClick": [Function],
        },
        Object {
          "ariaLabel": "moduleIdentity.detail.command.back",
          "iconProps": Object {
            "iconName": "ChromeClose",
          },
          "key": "ChromeClose",
          "name": "moduleIdentity.detail.command.back",
          "onClick": [Function],
        },
      ]
    }
  />
  <Component
    headerText="moduleIdentity.detail.headerText"
  />
  <div
    className="device-detail"
  >
    <div
      className="module-identity"
    >
      <Connect(MaskedCopyableTextField)
        allowMask={false}
        ariaLabel="moduleIdentity.moduleId"
        label="moduleIdentity.moduleId"
        labelCallout="moduleIdentity.moduleIdTooltip"
        readOnly={true}
        value={null}
      />
      <Component />
      <Component />
    </div>
  </div>
</Fragment>
`;
